--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -3,9 +3,59 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./radio.css">
     </head>
     <body>
+        <div class="wrap543">
+            <div class="inputs-dz">
+                <span class="inputs-dz__title">Radio Button</span>
+
+                <div class="inputs-dz__content">
+                    <label class="checkbox">
+                        <input type="radio" class="checkbox__input" name="radio1">
+
+                        <div class="checkbox__state">
+                            <div class="checkbox__control">
+                                <svg class="checkbox__icon" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="18" height="18" rx="9" fill="#4263EB"/>
+                                </svg>
+                            </div>
+
+                            <div class="checkbox__title">Default</div>
+                        </div>
+                    </label>
+
+                    <label class="checkbox">
+                        <input type="radio" class="checkbox__input"  name="radio1" checked>
+
+                        <div class="checkbox__state">
+                            <div class="checkbox__control">
+                                <svg class="checkbox__icon" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="18" height="18" rx="9" fill="#4263EB"/>
+                                </svg>
+                            </div>
+
+                            <div class="checkbox__title">Selected</div>
+                        </div>
+                    </label>
+
+                    <label class="checkbox">
+                        <input type="radio" class="checkbox__input" disabled>
+
+                        <div class="checkbox__state">
+                            <div class="checkbox__control">
+                                <svg class="checkbox__icon" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="18" height="18" rx="9" fill="#4263EB"/>
+                                </svg>
+                            </div>
+
+                            <div class="checkbox__title">Disabled</div>
+                        </div>
+                    </label>
+                </div>
+            </div>
+        </div>
 
     </body>
 </html>
